--- a/views/hitos.html
+++ b/views/hitos.html
@@ -20,58 +20,58 @@
 
 </head>
 <body>
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mb-5 bg-white ">
-        <a class="navbar-brand" href="../index.html"><img src="../img/logobio.png" alt="logo Biomill"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <a class="navbar-brand" href="../index.html"><img src="../img/logobio.png" alt="logo Biomill"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+
+        <li class="nav-item active dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Nosotros
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item active02" href="./nosotros.html">Nuestro equipo</a>
+              <a class="dropdown-item" href="./historia.html">Nuestra historia</a>        
+              <a class="dropdown-item" href="./hitos.html">Nuestros hitos</a>            
+            </div>
+          </li>
+        
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Trabajo
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
+            <a class="dropdown-item" href="./agm.html">AGN</a>               
+          </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Proyectos
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="./proyectos.html">Nuestros proyectos</a>
+              <a class="dropdown-item" href="./biohormon.html">Biohormon</a>    
+              <a class="dropdown-item" href="./vhh.html">VHH</a>             
+            </div>
+          </li>           
+
+        <li class="nav-item">
+            <a class="nav-link" href="./contacto.html">Contacto</a>
+          </li>
+      </ul>
       
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Nosotros
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="./nosotros.html">Nuestro equipo</a>
-                  <a class="dropdown-item" href="./historia.html">Nuestra historia</a>        
-                  <a class="dropdown-item" href="./hitos.html">Nuestros hitos</a>            
-                </div>
-              </li>
-            
-            <li class="nav-item active dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Trabajo
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
-                <a class="dropdown-item" href="./agm.html">AGN</a>               
-              </div>
-            </li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Proyectos
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="./proyectos.html">Nuestros proyectos</a>
-                  <a class="dropdown-item" href="./biohormon.html">Biohormon</a>    
-                  <a class="dropdown-item" href="./vhh.html">VHH</a>             
-                </div>
-              </li>           
-
-            <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">Contacto</a>
-              </li>
-          </ul>
-          
-        </div>
-      </nav>
-
+    </div>
+  </nav>
 
 
       <header>
