--- a/views/trabajo.html
+++ b/views/trabajo.html
@@ -101,11 +101,11 @@
       <div class="container">
         <div class="row">
           <div class="col-2"></div>
-          <div class="col-lg-4 col-md-12 col-sm-12">
+          <div class="col-lg-4 col-md-12 col-sm-12 ">            
             <p>Aplicamos tecnología avanzada de edición génica y animales transgénicos para elaborar productos competitivos a nivel mundial por su innovación productiva y menores costos, mejorando significativamente el acceso de la gente al cuidado de la salud a través de productos farmacéuticos, veterinarios y alimentos funcionales.</p>
           </div>
 
-          <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center text-center">
             <img src="../img/ourWork01.png" alt="" class="">
           </div>
         </div>
@@ -125,13 +125,20 @@
       </div>
   </section>
 
-  <section class="thirdSectionWork">
-    <div class="container text-center">
+  <section class="thirdSectionWork" >
+    <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 d-flex justify-content-center text-center">
 
+          <div class="grid">
+            <figure class="effect-zoe">
+              <img src="../img/img66.png" alt="img25"/>
+              <figcaption>
+                <h2>Plataforma de animales genéticamente modificados (agm)</h2>               
+              </figcaption>			
+            </figure>
+          </div>         
           
-
         </div>
       </div>
     </div>
