--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1220,3 +1220,49 @@ textarea.form-control {
 /*--------nuestros proyectos------------*/
 
 
+.secondSectionProj {
+
+
+}
+
+.sq01{
+
+    margin: 0 0 0 3vw;
+}
+
+
+.sq02{
+
+    margin: 0 0 0 3vw;
+}
+
+.sq03{
+
+    margin: -20vh 0 0 3vw;
+}
+
+.sq04{
+
+    margin: -20vh 0 0 11vw;
+}
+
+.sq05{
+
+    margin: -20vh 0 0 19vw;
+}
+
+.sq06{
+
+    margin: -20vh 0 0 7vw;
+}
+.sq07{
+
+    margin: -20vh 0 0 15vw;
+}
+
+.sq08{
+
+    margin: -20vh 0 0 23vw;
+}
+
+
