--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -74,6 +74,98 @@
       </nav>
 
 
+  <div class="bkg">
+
+      <section class="firstSectionUs">
+  
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 text-center titleUs"> 
+              <img src="../img/miscelanea.png" alt="">
+              <span>Nuestros proyectos</span>
+            </div> 
+          </div>
+        </div>
+
+      </section>
+
+
+      <section class="secondSectionProj">
+
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-2"></div>
+            <div class="col-3">
+              <img src="../img/sq01.png" alt="" class="sq01">
+            </div>
+            <div class="col-3">
+              <img src="../img/sq02.png" alt="" class="sq02">
+            </div>
+          </div> <!--fin del row01-->
+
+          <div class="row">
+            <div class="col-1"></div>
+            <div class="col-2">
+              <img src="../img/sq03.png" alt="" class="sq03">
+            </div>
+            <div class="col-2">
+              <img src="../img/sq04.png" alt="" class="sq04">
+            </div>
+            <div class="col-2">
+              <img src="../img/sq05.png" alt="" class="sq05">
+            </div>
+          </div><!--fin del row02-->
+
+          <div class="row">
+            <div class="col-2"></div>
+            <div class="col-2">
+              <img src="../img/sq06.png" alt="" class="sq06">
+            </div>
+            <div class="col-2">
+              <img src="../img/sq07.png" alt="" class="sq07">
+            </div>
+            <div class="col-2">
+              <img src="../img/sq08.png" alt="" class="sq08">
+            </div>
+          </div><!--fin del row03-->
+
+        </div>
+
+
+      </section>
+
+
+
+      <!--aca va a ir el grid común para mobile con sus img correspondientes. uno por row-->
+      
+  </div>
+
+
+
+  <footer>
+
+    <div class="container text-center">
+      <div class="row ">
+        <div class="col-md-6 col-sm-12 ">
+          <img src="../img/logowhite.png" alt="">
+        </div>
+
+
+        <div class="col-md-4 col-sm-12 text-center">
+          <p>
+            J. B. Alberdi 431 piso 15, Olivos, Buenos Aires - Argentina <br>
+            Tel: +5411 5263-5919 <br>
+            contacto@biomill.com.ar
+          </p>
+        </div>
+      </div>
+
+    </div>
+    <div class="lineDown"></div>
+  </footer>
+      
+
+
     <!--scripts-->
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
