--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -96,7 +96,7 @@
           <div class="row">
             <div class="col-2"></div>
             <div class="col-3">
-              <img src="../img/sq01.png" alt="" class="sq01">
+              <img src="../img/sq01.png" alt="" class="sq01 " >
             </div>
             <div class="col-3">
               <img src="../img/sq02.png" alt="" class="sq02">
@@ -135,6 +135,41 @@
       </section>
 
 
+      <section class="mobileProj text-center">
+
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <img src="../img/sq01.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-12">
+              <img src="../img/sq02.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-12">
+              <img src="../img/Bsq03.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-12">
+              <img src="../img/Bsq04.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-12">
+              <img src="../img/Bsq05.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-12">
+              <img src="../img/Bsq06.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-12">
+              <img src="../img/Bsq7.png" alt="" class="img-fluid">
+            </div>
+            <div class="col-12">
+              <img src="../img/Bsq08.png" alt="" class="img-fluid">
+            </div>
+          </div>
+        </div>
+
+
+      </section>
+
+
 
       <!--aca va a ir el grid común para mobile con sus img correspondientes. uno por row-->
       
@@ -144,7 +179,7 @@
 
   <footer>
 
-    <div class="container text-center">
+    <div class="container text-center visiFoots">
       <div class="row ">
         <div class="col-md-6 col-sm-12 ">
           <img src="../img/logowhite.png" alt="">
