--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,8 @@ footer p{
 
 }
 
+
+
 @media (max-width: 992px) {
 
     footer {
@@ -1206,15 +1208,18 @@ textarea.form-control {
 .indefFirst{
 
     margin-top: -50px;
-    background-size: cover;
-
+   /* background-size: cover;*/
+   
 }
 
 .full-screen { /*la llama desde js*/
         
     background-repeat: no-repeat;
+    /*aca me acorta solo la imagen*/
+    
     
 }
+
 
 
 /*--------nuestros proyectos------------*/
