--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1209,6 +1209,7 @@ textarea.form-control {
 
     margin-top: -50px;
    /* background-size: cover;*/
+   background-position: center;
    
 }
 
@@ -1220,7 +1221,7 @@ textarea.form-control {
     
 }
 
-
+@media (max-width: 992px){}
 
 /*--------nuestros proyectos------------*/
 
