--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1208,18 +1208,19 @@ textarea.form-control {
 .indefFirst{
 
     margin-top: -50px;
-   /* background-size: cover;*/
+   background-size: cover;
    background-position: center;
+   background-repeat: no-repeat;
    
-}
+}/*
 
 .full-screen { /*la llama desde js*/
-        
+        /*
     background-repeat: no-repeat;
     /*aca me acorta solo la imagen*/
     
-    
-}
+   /* 
+}*/
 
 @media (max-width: 992px){}
 
@@ -1317,5 +1318,133 @@ textarea.form-control {
         display: none;
     }
 
+}
+
+
+/*-----------slider02-------------------*/
+
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+#slide-show {
+  height: 50vh;
+  min-height: 50vh;
+  overflow: hidden;
+  width: 100vw;
+  min-width: 100vw !important;
+}
+
+.slide-text {
+  font-size: 20px;
+  color: #fff;
+  text-align:center;
+}
+
+.slide-text b {
+  font-weight: 400; 
+}
+
+.slide-text h2 {
+  font-weight: 200;
+  font-family: Raleway;
+  font-size: 50px;
+  text-align: center;
+  line-height: 60px;
+  letter-spacing: 1px;
+  color: #fff;
+}
+
+.slidex {
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+  z-index: -1;
+}
+
+.activx {
+  opacity: 1;
+}
+
+.slideshow-nav {
+  position: absolute;
+  bottom: 50%; 
+  width: 100vw;
+  min-width: 100vw !important;
+  font-size: 30px;
+  background: transparent;  
+}
+
+.previousx {
+  float: left;
+}
+
+.nextx {
+  float: right;
+}
+
+.bg1, .bg2, .bg3, .bg4 {
+  background-repeat: no-repeat !important;
+  background-attachment: scroll !important;
+  background-position: center center !important;
+  background-size: cover !important;
+  background-image: url("../../img/carou01.png");
+  height: 100vh;
+  min-height: 100vh;
+  overflow: hidden;
+  width: 100vw;
+  min-width: 100vw !important;
+  position: absolute;
+  top:0;
+  left:0;
+}
+
+.bg2 {background-image: url("../../img/carou02.png");}
+.bg3 { background-image: url("../../img/carou03.png");}/*
+.bg4 {background-image: url("../../img/carou03.png");}
+*/
+.slider-center {
+  position: absolute;
+  height:15%;
+  width: 50%;
+  left: 50%;
+  top: 50%;
+  background-color: transparent;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: left;
+  letter-spacing: 2px;
+}
+
+.nav-link {
+  transition: all 0.4s;
+  padding: 15px;
+  color:#fff;
+  opacity: 0.2;
+  font-size: 40px;  
+}
+.nav-link:hover {
+  color: #999;
+  font-size: 80px;
+  opacity: 0.8;
+}
+
+.arrow a {
+  position: absolute;
+  bottom:0;
+  left: 50%;
+  color: #fff;
+  transition: all 0.4s;
+  cursor: pointer;
+  font-size: 80px;
+  padding: 0 0 20px 0;
+  opacity: 0.2;
+}
+
+.arrow a:hover {
+  color: #999;
+  font-size: 100px;
+  opacity: 0.8;
 }
 
