--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -87,7 +87,7 @@
           <div class="row">
             <div class="col-12 text-center titleUs"> 
               <img src="../img/miscelanea.png" alt="">
-              <span>Nuestro trabajo</span>
+              <span>Nuestro equipo</span>
             </div> 
           </div>
         </div>
