--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,18 @@ header{
 
 }
 
+@media (max-width: 400px) {
+
+
+    .firstSectionUs span {
+
+        font-size: 1.6em;              
+    }
+}
+
+
+
+
 
 /*------------AGM-----------*/
 
