--- a/views/contacto.html
+++ b/views/contacto.html
@@ -46,7 +46,7 @@
                 </div>
               </li>
             
-            <li class="nav-item active dropdown">
+            <li class="nav-item  dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Trabajo
               </a>
@@ -67,7 +67,7 @@
                 </div>
               </li>           
 
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="./contacto.html">Contacto</a>
               </li>
           </ul>
@@ -82,7 +82,7 @@
 
 <div class="bkg">
 
-      <section class="firstSectionUs contUsTittle">
+      <section class="firstSectionUs">
 
         <div class="container-fluid">
           <div class="row">
