--- a/views/hitos.html
+++ b/views/hitos.html
@@ -39,9 +39,9 @@
               Nosotros
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item active02" href="./nosotros.html">Nuestro equipo</a>
+              <a class="dropdown-item" href="./nosotros.html">Nuestro equipo</a>
               <a class="dropdown-item" href="./historia.html">Nuestra historia</a>        
-              <a class="dropdown-item" href="./hitos.html">Nuestros hitos</a>            
+              <a class="dropdown-item active02" href="./hitos.html">Nuestros hitos</a>            
             </div>
           </li>
         
@@ -81,7 +81,7 @@
 
 <div class="bkg">
 
-  <section class="firstSectionHitos">
+  <section class="firstSectionUs">
 
         <div class="container-fluid">
           <div class="row">
