--- a/views/vhh.html
+++ b/views/vhh.html
@@ -44,7 +44,7 @@
                 </div>
               </li>
             
-            <li class="nav-item active dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Trabajo
               </a>
@@ -54,14 +54,14 @@
               </div>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Proyectos
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="./proyectos.html">Nuestros proyectos</a>
                   <a class="dropdown-item" href="./biohormon.html">Biohormon</a>    
-                  <a class="dropdown-item" href="./vhh.html">VHH</a>             
+                  <a class="dropdown-item active02" href="./vhh.html">VHH</a>             
                 </div>
               </li>           
 
