--- a/views/agm.html
+++ b/views/agm.html
@@ -60,7 +60,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
-                <a class="dropdown-item" href="./agm.html">AGM</a>               
+                <a class="dropdown-item active02" href="./agm.html">AGM</a>               
               </div>
             </li>
 
