--- a/views/historia.html
+++ b/views/historia.html
@@ -35,18 +35,18 @@
               <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
             </li>
 
-            <li class="nav-item dropdown">
+            <li class="nav-item active dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Nosotros
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="./nosotros.html">Nuestro equipo</a>
-                  <a class="dropdown-item" href="./historia.html">Nuestra historia</a>        
+                  <a class="dropdown-item active02" href="./historia.html">Nuestra historia</a>        
                   <a class="dropdown-item" href="./hitos.html">Nuestros hitos</a>            
                 </div>
               </li>
             
-            <li class="nav-item active dropdown">
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Trabajo
               </a>
