--- a/views/trabajo.html
+++ b/views/trabajo.html
@@ -50,7 +50,7 @@
                 Trabajo
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
+                <a class="dropdown-item active02" href="./trabajo.html">Nuestros trabajos</a>
                 <a class="dropdown-item" href="./agm.html">AGN</a>               
               </div>
             </li>
