--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1722,6 +1722,6 @@ textarea.form-control {
         font-weight: 600;
         color: #091F61;
         text-align: center;
-        font-size: 1.5em;
+        font-size: 1.2em !important;
     }
 }   
