--- a/views/trabajo.html
+++ b/views/trabajo.html
@@ -51,7 +51,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item active02" href="./trabajo.html">Nuestros trabajos</a>
-                <a class="dropdown-item" href="./agm.html">AGN</a>               
+                <a class="dropdown-item" href="./agm.html">AGM</a>               
               </div>
             </li>
 
