--- a/views/vhh.html
+++ b/views/vhh.html
@@ -50,7 +50,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
-                <a class="dropdown-item" href="./agm.html">AGN</a>               
+                <a class="dropdown-item" href="./agm.html">AGM</a>               
               </div>
             </li>
 
@@ -103,8 +103,8 @@
               Rotavirus (RV) es el principal agente productor de diarrea aguda infantil a nivel mundial. La gastroenteritis por RV se caracteriza por una diarrea acuosa profusa que, en algunos casos, llega a la deshidratación grave y muerte del paciente. A nivel global, RV es responsable del 25-50% de gastroenteritis infantiles que requieren hospitalización en países desarrollados y en vías de desarrollo, respectivamente. Este agente fue asociado a 24 millones de consultas ambulatorias, 2.4 millones de hospitalizaciones y 500.000 muertes por año de niños menores de 5 años.  </p>
           </div>
     
-          <div class="col-lg-6 col-md-12 col-sm-12">
-            <img src="../img/rotavirus.png" alt="" class="img-fluid">
+          <div class="col-lg-6 col-md-12 col-sm-12 text-center" >
+            <img src="../img/rotavirus02.png" alt="" class="img-fluid">
           </div>
     
         </div>
