--- a/views/historia.html
+++ b/views/historia.html
@@ -52,7 +52,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
-                <a class="dropdown-item" href="./agm.html">AGN</a>               
+                <a class="dropdown-item" href="./agm.html">AGM</a>               
               </div>
             </li>
 
@@ -133,7 +133,7 @@
             <span class="yearBio">2018</span>  
             <hr>       
               <div> 
-              <p> Biodisus se asocia al Private Equity Acon focalizándose en el desarrollo y crecimiento de fármacos biosimilares.</p> 
+              <p> Biosidus se asocia al Private Equity Acon focalizándose en el desarrollo y crecimiento de fármacos biosimilares.</p> 
               </div>
           </div> 
 
