--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -19,6 +19,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+  <!-- AOS-->
+
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
     
@@ -52,7 +57,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
-                <a class="dropdown-item" href="./agm.html">AGN</a>               
+                <a class="dropdown-item" href="./agm.html">AGM</a>               
               </div>
             </li>
 
@@ -94,6 +99,7 @@
 
     </section>
 
+    <div data-aos="fade-up" data-aos-duration="2000">
     <section class="secondSectionUs">
 
       <div class="container-fluid">
@@ -111,7 +117,7 @@
             <img src="../img/user02.png" alt="" class="img-fluid">
             <div class="text-center">
               <h3>Gustavo <br> Mahler</h3>
-              <p>Director Biomill. <br>  Director Biosidus Group. <br>  Ex CEO AGR Biologics.
+              <p>Director Biomill. <br>  Director Biosidus Group. <br>  Ex CEO AGC Biologics.
                 </p>
               </div>
           </div>
@@ -133,7 +139,7 @@
             <img src="../img/user05.png" alt="" class="img-fluid">
             <div class="text-center">
               <h3>Federico <br> Alais</h3>
-              <p>Gerente de Desarrollo Comercial. <br> Experto en desarrollo de negocios farmacéuticos y agronegocios.</p>
+              <p>Gerente de Desarrollo Comercial. <br> Experto en negocios farmacéuticos y agronegocios.</p>
               </div>
           </div>
 
@@ -141,7 +147,7 @@
         </div>
       </div>
 
-    </section>
+    </section></div>
 
   </div>
 
@@ -166,7 +172,14 @@
     </div>
     <div class="lineDown"></div>
   </footer>
+
     <!--scripts-->
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
