--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -50,7 +50,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="./trabajo.html">Nuestros trabajos</a>
-                <a class="dropdown-item" href="./agm.html">AGN</a>               
+                <a class="dropdown-item" href="./agm.html">AGM</a>               
               </div>
             </li>
 
@@ -101,10 +101,10 @@
           <div class="row">
             <div class="col-2"></div>
             <div class="col-3">
-              <img src="../img/sq01.png" alt="" class="sq01 " >
+              <a href="./biohormon.html"> <img src="../img/sq01.png" alt="" class="sq01" ></a>
             </div>
             <div class="col-3">
-              <img src="../img/sq02.png" alt="" class="sq02">
+             <a href="./vhh.html">  <img src="../img/sq02.png" alt="" class="sq02"></a>
             </div>
           </div> <!--fin del row01-->
 
