--- a/views/agm.html
+++ b/views/agm.html
@@ -26,6 +26,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+<!-- AOS-->
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -88,7 +92,7 @@
       </header>
 
       <div class="bkg">
-
+        <div data-aos="fade-up"    data-aos-duration="2000">
         <section class="firstSectionAgm">
   
           <div class="container">
@@ -141,7 +145,7 @@
 
           
   
-      </section>
+      </section> 
 
       <section class="secondSectionAgm">
 
@@ -190,7 +194,7 @@
           </div>
         </div>
 
-      </section>
+      </section>  
   
       
 
@@ -224,7 +228,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> </div>
 
 <!--
         <div class="container ">
@@ -323,6 +327,12 @@
     </footer>
 
 <!--scripts-->
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
 
 <script src="../assets/js/script.js"></script>
 
