--- a/views/contacto.html
+++ b/views/contacto.html
@@ -20,6 +20,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+<!-- AOS-->
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -82,6 +86,7 @@
 
 <div class="bkg">
 
+
       <section class="firstSectionUs">
 
         <div class="container-fluid">
@@ -94,7 +99,7 @@
         </div>
 
     </section>
-
+    <div data-aos="fade-up"    data-aos-duration="2000">
 
     <section class="ftco-section">
       <div class="container-fluid">
@@ -150,9 +155,9 @@
       </div>
     </section>
 
-  <br> <br> <br> <br>
+  <br> <br> <br> <br> </div>
 
-  </div>
+  </div> 
 
   <footer>
 
@@ -177,6 +182,12 @@
   </footer>
 
     <!--scripts-->
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script>
 
   <script src="js/main.js"></script>
 
