--- a/views/historia.html
+++ b/views/historia.html
@@ -20,6 +20,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+
+<!-- AOS-->
+
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -85,6 +90,8 @@
 
 <div class="bkg">
 
+ 
+
   <section class="firstSectionUs">
 
         <div class="container-fluid">
@@ -97,7 +104,7 @@
         </div>
 
     </section>
-
+    <div data-aos="fade-up"    data-aos-duration="2000">
     <section class="histoBio">
       <div class="container">
         <div class="row">
@@ -160,7 +167,7 @@
       </div>
     </section>
 
-
+</div>
 
 </div>
 
@@ -188,6 +195,12 @@
   <div class="lineDown"></div>
 
     <!--scripts-->
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
