--- a/views/biohormon.html
+++ b/views/biohormon.html
@@ -101,7 +101,7 @@
 
 </section>
 
-<div data-aos="fade-up"    data-aos-duration="2000"></div>
+<div data-aos="fade-up"    data-aos-duration="2000">
 <section class="secondSectionBio"> 
 
   <div class="container">
