--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -159,22 +159,22 @@
               <img src="../img/sq02.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/Bsq03.png" alt="" class="img-fluid">
+              <img src="../img/sq03.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/Bsq04.png" alt="" class="img-fluid">
+              <img src="../img/sq04.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/Bsq05.png" alt="" class="img-fluid">
+              <img src="../img/sq05.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/Bsq06.png" alt="" class="img-fluid">
+              <img src="../img/sq06.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/Bsq7.png" alt="" class="img-fluid">
+              <img src="../img/sq7.png" alt="" class="img-fluid">
             </div>
             <div class="col-12">
-              <img src="../img/Bsq08.png" alt="" class="img-fluid">
+              <img src="../img/sq08.png" alt="" class="img-fluid">
             </div>
           </div>
         </div>
