--- a/views/trabajo.html
+++ b/views/trabajo.html
@@ -114,7 +114,7 @@
           </div>
 
           <div class="col-lg-6 col-md-12 col-sm-12 d-flex justify-content-center text-center">
-            <img src="../img/ourWork01.png" alt="" class="">
+            <img src="../img/ourWork01.png" alt="" class="workimg">
           </div>
         </div>
       </div>
@@ -139,12 +139,14 @@
         <div class="col-12 d-flex justify-content-center text-center">
 
           <div class="grid">
+            <a href="./agm.html">
             <figure class="effect-zoe">
               <img src="../img/img66.png" alt="img25"/>
               <figcaption>
-                <h2>Plataforma de animales genéticamente modificados (agm)</h2>               
+                <h2>Plataforma de animales genéticamente modificados (AGM)</h2>               
               </figcaption>			
             </figure>
+          </a>
           </div>         
           
         </div>
