--- a/views/vhh.html
+++ b/views/vhh.html
@@ -122,8 +122,8 @@
         <div class="row">
           <div class="col-lg-6 col-md-12 col-sm-12 ">
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
+            <div id="carouselExampleSlidesOnly" class="carousel slide " data-ride="carousel">
+              <div class="carousel-inner ">
                 <div class="carousel-item active">
                     <img src="../img/carruVhh01.png" class="d-block w-75 " alt="...">
                 </div>
@@ -136,7 +136,7 @@
             
           </div>
 
-          <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="col-lg-6 col-md-12 col-sm-12 text-responsive">
             <p>En un trabajo de cooperación con el INTA Argentina, se obtuvieron en primer lugar genes productores de VHH provenientes de llamas, con características de especificidad, resistencia y neutralización viral. Dichos genes fueron utlizados para construir un cassette de expresión que se implantó en bovinos, que al momento de producir leche, lograban expresar VHH en la misma. Los nanoanticuerpos presentes en la leche tiene la función protectiva ante RV, por lo que ésta leche se constituyen como tal en un alimento funcional o una fuente de nanoanticuerpos como un principio activo de formulaciones farmacéuticas o suplementos nutricionales.  </p>
             
           </div>
