--- a/views/agm.html
+++ b/views/agm.html
@@ -220,7 +220,7 @@
 
 
       </div>
-   
+  <div class="sectImgAgm">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -228,6 +228,7 @@
           </div>
         </div>
       </div>
+  </div>
     </section> </div>
 
 <!--
