--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1306,6 +1306,18 @@ textarea.form-control {
    
 }
 
+@media (min-width: 1200px) {
+    .hitosCard {
+
+        height: 22.60rem;
+        margin-top: 100px;/*
+        z-index: 50;
+        position: absolute;  */  
+        
+        
+        }
+}
+
 @media (max-width: 992px) {
 
 
