link mobile rombo

--- a/views/proyectos.html
+++ b/views/proyectos.html
@@ -152,11 +152,11 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-12">
-              <img src="../img/sq01.png" alt="" class="img-fluid">
+            <div class="col-12">  <a href="./biohormon.html">
+              <img src="../img/sq01.png" alt="" class="img-fluid"> </a>
             </div>
-            <div class="col-12">
-              <img src="../img/sq02.png" alt="" class="img-fluid">
+            <div class="col-12"> <a href="./vhh.html">
+              <img src="../img/sq02.png" alt="" class="img-fluid"></a>
             </div>
             <div class="col-12">
               <img src="../img/sq03.png" alt="" class="img-fluid">
