--- a/views/hitos.html
+++ b/views/hitos.html
@@ -165,7 +165,7 @@
             <div class="card hitosCard">
 
               <h3>2010</h3>
-              <h6>Rodeo Pampa Mansa <br> <span> <b>  Clonación de Caballo </b> </span></h6>
+              <h6>BS Ñandubay Bicentenario <br> <span> <b>  Clonación de Caballo </b> </span></h6>
               
               <p> 
                 Nace BS Ñandubay Bicentenario, primer caballo clonado de Latinoamérica.</p>
@@ -180,7 +180,7 @@
             <div class="card hitosCard">
 
               <h3>2016</h3>
-              <h6>Rodeo Pampa Mansa <br> <span> <b> VHH Rotavirus </b> </span></h6>
+              <h6>Nace Punita <br> <span> <b> VHH Rotavirus </b> </span></h6>
               
               <p>
                 Se logra el nacimiento de una vaca cuya leche contiene nanoanticuerpos VHH con la capacidad de neutralizar Rotavirus.</p>
