img trabajo linea 863 coment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -860,12 +860,12 @@ header{
     margin-top: 45px;
    
 }
-
+/*
 .secondSectionWork img {
         max-width: 70%;
         height: auto;
     
-}
+}*/
 
 .thirdSectionWork {
 
