--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1306,16 +1306,46 @@ textarea.form-control {
    
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1536px) {
+    
+
+    .allCard h6 {
+
+        font-size: 17px !important;
+    }
+}
+
+@media (min-width: 1360px) {
     .hitosCard {
 
         height: 22.60rem;
         margin-top: 100px;/*
         z-index: 50;
         position: absolute;  */  
-        
-        
+        width: 110%;
+               
         }
+}
+
+
+@media (min-width: 1200px) {
+    .hitosCard {
+
+        height: 22.60rem;
+        margin-top: 100px;/*
+        z-index: 50;
+        position: absolute;  */    
+        }
+
+    .allCard h6 {
+
+        font-size: 15px;
+    }    
+
+    .allCard p {
+
+        margin: 0 5px 0 5px;
+    }
 }
 
 @media (max-width: 992px) {
